tests/baselines/reference/jsFileCompilationDecoratorSyntax.errors.txt
tests/cases/compiler/a.js(1,1): error TS8017: 'decorators' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    @internal class C { }
    ~~~~~~~~~
!!! error TS8017: 'decorators' can only be used in a .ts file.